deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retaillens-prod
  labels:
    name: retaillens-prod
    environment: production
