deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retaillens-service
  namespace: retaillens-prod
spec:
  type: ClusterIP
  selector:
    app: retaillens
  ports:
    - name: http-ui
      port: 8501
      targetPort: 8501
    - name: http-api
      port: 8000
      targetPort: 8000
